--- a/servers.yml
+++ b/servers.yml
@@ -8,6 +8,9 @@ Parameters:
     ProjectName:
       Description: A Project name that will be prefixed to resource names
       Type: String
+    InstanceType:
+      Description: Instance type
+      Type: String
 
 Resources:
   LBSecGroup:
@@ -59,15 +62,15 @@ Resources:
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://udacity-demo-1-vicky/Udacity.zip .
-          unzip -o Udacity.zip
+          aws s3 cp s3://udacity-demo-1/udacity.zip .
+          unzip -o udacity.zip
           systemctl restart apache2.service
-      ImageId: ami-005bdb005fb00e791
+      ImageId: ami-0d1cd67c26f5fca19
       SecurityGroups:
         - Ref: WebServerSecGroup
       IamInstanceProfile:
         Fn::ImportValue: !Sub "${ProjectName}-IAM-NAME"
-      InstanceType: t2.small
+      InstanceType: !Ref InstanceType
       BlockDeviceMappings:
         - DeviceName: "/dev/sda1"
           Ebs:
@@ -122,9 +125,16 @@ Resources:
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 8
       HealthyThresholdCount: 2
-      Port: 8080
+      Port: 80
       Protocol: HTTP
       UnhealthyThresholdCount: 5
       VpcId: 
         Fn::ImportValue:
           Fn::Sub: "${ProjectName}-VPCID"
+
+Outputs:
+  WebAppLoadBalancerURL:
+    Description: Public URL of the Load Balancer
+    Value: !Join [ "", [ 'http://', !GetAtt WebAppLB.DNSName ]]
+    Export:
+      Name: !Sub ${ProjectName}-LoadBalancer-URL
